[package]
name = "tycho-core"
description = "Basic functionality of peer."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
bytesize = { workspace = true }
everscale-types = { workspace = true, features = ["blake3", "rayon"] }
futures-util = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tl-proto = { workspace = true }
tokio = { workspace = true, features = ["rt", "fs"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

# local deps
tycho-block-util = { workspace = true }
tycho-network = { workspace = true }
tycho-storage = { workspace = true }
tycho-util = { workspace = true }

[dev-dependencies]
everscale-crypto = { workspace = true }
tempfile = { workspace = true }
tycho-block-util = { workspace = true, features = ["test"] }
tycho-storage = { workspace = true, features = ["test"] }
tycho-util = { workspace = true, features = ["test"] }

[features]
test = []

[lints]
workspace = true
