[package]
name = "tycho-core"
description = "Basic functionality of peer."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[test]]
name = "archives"
required-features = ["test"]

[[test]]
name = "block_strider"
required-features = ["test"]

[[test]]
name = "overlay_client"
required-features = ["test"]

[[test]]
name = "overlay_server"
required-features = ["test"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
bumpalo = { workspace = true }
bumpalo-herd = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
bytesize = { workspace = true }
cassadilia = { workspace = true }
castaway = { workspace = true }
clap = { workspace = true, optional = true }
crc32c = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
humantime = { workspace = true }
metrics = { workspace = true }
moka = { workspace = true }
parking_lot = { workspace = true }
parking_lot_core = { workspace = true }
pin-project-lite = { workspace = true }
quick_cache = { workspace = true }
rand = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tl-proto = { workspace = true }
tokio = { workspace = true, features = ["rt", "fs"] }
tracing = { workspace = true }
triomphe = { workspace = true }
tycho-crypto = { workspace = true }
tycho-types = { workspace = true, features = ["blake3", "rayon", "rand9"] }
weedb = { workspace = true }

# local deps
tycho-block-util = { workspace = true }
tycho-network = { workspace = true }
tycho-storage = { workspace = true }
tycho-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tycho-block-util = { workspace = true, features = ["test"] }
tycho-crypto = { workspace = true }
tycho-network = { workspace = true, features = ["test"] }
tycho-storage = { workspace = true, features = ["test"] }
tycho-util = { workspace = true, features = ["test"] }
similar-asserts = { workspace = true }

[features]
test = []
cli = ["dep:clap", "clap/derive"]

[lints]
workspace = true
