[package]
name = "explorer-models"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
once_cell = "1.17.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"


hex = "0.4.3"
diesel = { version = "2.1.0", features = ["mysql_backend", "serde_json", "uuid", "chrono"] }
chrono = "0.4.26"
diesel-derive-enum = { version = "2.1.0", features = ["mysql"] }
uuid = "1.4.0"

[features]
default = []
csv = []
venom = []

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
diesel-async = { version = "0.4.1", features = ["mysql", "mobc"] }
