[package]
name = "tycho-network"
version = "0.0.1"
edition = "2021"
description = "A peer-to-peer networking library."
include = ["src/**/*.rs", "src/**/*.tl"]

[dependencies]
# crates.io deps
ahash = "0.8"
anyhow = "1.0"
bytes = "1.0"
dashmap = "5.4"
ed25519 = { version = "2.0", features = ["alloc", "pkcs8"] }
everscale-crypto = { version = "0.2", features = ["tl-proto"] }
futures-util = { version = "0.3", features = ["sink"] }
hex = "0.4"
moka = { version = "0.12", features = ["sync"] }
pin-project-lite = "0.2"
pkcs8 = "0.10"
quinn = { version = "0.10", default-features = false, features = ["runtime-tokio", "tls-rustls"] }
rand = "0.8"
rcgen = "0.11"
ring = "0.16"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-webpki = "0.101"
serde = "1.0"
socket2 = "0.5"
thiserror = "1"
tl-proto = "0.4"
tokio = { version = "1", features = ["rt", "sync", "io-util", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
x509-parser = "0.15"

# NOTE: use crates.io dependency when it is released
# https://github.com/sagebind/castaway/issues/18
castaway = { git = "https://github.com/sagebind/castaway.git" }

# local deps
tycho-util = { path = "../util", version = "=0.0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"

[lints]
workspace = true
