[package]
name = "tycho-network"
version = "0.0.1"
edition = "2021"
description = "A peer-to-peer networking library."
include = ["src/**/*.rs", "src/**/*.tl"]

[[example]]
name = "network-node"
path = "examples/network_node.rs"

[dependencies]
# crates.io deps
ahash = "0.8"
anyhow = "1.0"
base64 = "0.21"
bytes = { version = "1.0", features = ["serde"] }
castaway = "0.2"
dashmap = "5.4"
ed25519 = { version = "2.0", features = ["alloc", "pkcs8"] }
everscale-crypto = { version = "0.2", features = ["tl-proto"] }
futures-util = { version = "0.3", features = ["sink"] }
hex = "0.4"
moka = { version = "0.12", features = ["sync"] }
parking_lot = "0.12"
pin-project-lite = "0.2"
pkcs8 = "0.10"
quinn = { version = "0.10", default-features = false, features = ["runtime-tokio", "tls-rustls"] }
rand = "0.8"
rcgen = "0.11"
ring = "0.16"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-webpki = "0.101"
serde = "1.0"
socket2 = "0.5"
thiserror = "1"
tl-proto = "0.4"
tokio = { version = "1", features = ["rt", "sync", "io-util", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
x509-parser = "0.15"

# local deps
tycho-util = { path = "../util", version = "=0.0.1" }

[dev-dependencies]
argh = "0.1"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"

[lints]
workspace = true
