[package]
name = "tycho-network"
description = "A peer-to-peer networking library."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[example]]
name = "network-node"
path = "examples/network_node.rs"

[dependencies]
# crates.io deps
ahash = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
bytesize = { workspace = true }
castaway = { workspace = true }
dashmap = { workspace = true }
ed25519 = { workspace = true, features = ["alloc", "pkcs8"] }
everscale-crypto = { workspace = true }
exponential-backoff = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
hex = { workspace = true }
indexmap = { workspace = true }
metrics = { workspace = true }
moka = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
pkcs8 = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
rustls = { workspace = true }
rustls-webpki = { workspace = true }
serde = { workspace = true, features = ["derive"] }
socket2 = { workspace = true }
thiserror = { workspace = true }
tl-proto = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "io-util", "macros"] }
tokio-util = { workspace = true, features = ["time"] }
tracing = { workspace = true }

# local deps
tycho-util = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

tycho-util = { workspace = true, features = ["test"] }

[lints]
workspace = true
