[package]
name = "tycho-rpc-subscriptions"
edition = "2024"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dashmap = { workspace = true }
smallvec = { workspace = true }
tycho-types = { workspace = true }
tycho-util = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

crossbeam-queue = { workspace = true }
bytesize = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = "0.9.2"
rand_distr = "0.5"
hdrhistogram = "7.5.4"
jiff = "0.2"
proptest = "1.5.0"
alloc-metrics = "0.1.1"

[lints]
workspace = true
