[package]
name = "tycho-rpc-subscriptions"
description = "Tycho RPC account subscriptions."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# crates.io deps
bytesize = { workspace = true }
crossbeam-queue = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tycho-types = { workspace = true }
uuid = { workspace = true }

# local deps
tycho-util = { workspace = true }

[dev-dependencies]
alloc-metrics = { workspace = true }
hdrhistogram = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

[lints]
workspace = true
