[package]
name = "tycho-rpc"
description = "Public RPC service."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# local deps
tycho-block-util = { workspace = true }
tycho-core = { workspace = true }
tycho-storage = { workspace = true }
tycho-util = { workspace = true }

[lints]
workspace = true
