[package]
name = "tycho-rpc"
description = "Public RPC service."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
everscale-types = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
metrics = { workspace = true }
moka = { workspace = true }
num-bigint = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "timeout"] }
tracing = { workspace = true }
tycho-vm = { workspace = true }

# local deps
tycho-block-util = { workspace = true }
tycho-core = { workspace = true }
tycho-storage = { workspace = true }
tycho-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tycho-network = { workspace = true }
tycho-util = { workspace = true, features = ["test"] }

[features]
default = []
compression = ["tower-http/compression-gzip"]

[lints]
workspace = true
