[package]
name = "tycho-simulator"
description = "A network simulation tool."
include = ["src/**/*.rs"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "simulator"
path = "src/main.rs"

[dependencies]
# crates.io deps
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tycho-util = { path = "../util" }

[lints]
workspace = true
