[package]
name = "tycho-simulator"
description = "A network simulation tool."
include = ["src/**/*.rs"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "simulator"
path = "src/main.rs"

[dependencies]
# crates.io deps
anyhow = { workspace = true }
clap = { workspace = true }
fs_extra = "1.3.0"
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

tycho-util = { workspace = true }

[lints]
workspace = true
