[package]
name = "tycho-simulator"
description = "A network simulation tool."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "simulator"
path = "src/main.rs"

[dependencies]
# crates.io deps
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }

tycho-util = { workspace = true }

[lints]
workspace = true
