[package]
name = "tycho-slasher-traits"
description = "Tycho slasher traits."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# crates.io deps
async-trait = { workspace = true }
thiserror = { workspace = true }

# local deps
tycho-network = { workspace = true } # TODO: Somehow get only models from the network
tycho-types = { workspace = true }
tycho-util = { workspace = true }

[lints]
workspace = true
