[package]
name = "tycho-slasher"
description = "Tycho slasher implementation."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# crates.io deps
anyhow = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true}
metrics = { workspace = true }
parking_lot = { workspace = true }
scopeguard = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tycho-crypto = { workspace = true }
tycho-types = { workspace = true }

# local deps
tycho-block-util = { workspace = true }
tycho-core = { workspace = true }
tycho-slasher-traits = { workspace = true }
tycho-util = { workspace = true }

[lints]
workspace = true
