[package]
name = "tycho-storage-traits"
description = "Traits used by Tycho storage."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# crates.io deps
bytes = { workspace = true }
smallvec = { workspace = true }
tycho-types = { workspace = true, features = ["blake3", "rayon"] }

[lints]
workspace = true
