[package]
name = "tycho-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# crates.io deps
ahash = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
bitflags = { workspace = true }
bumpalo = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
crc = { workspace = true }
dashmap = { workspace = true }
everscale-types = { workspace = true, features = ["tycho", "stats"] }
fdlimit = { workspace = true }
humantime = { workspace = true }
libc = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
parking_lot_core = { workspace = true }
quick_cache = { workspace = true }
rlimit = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tl-proto = { workspace = true }
tokio = { workspace = true, features = ["rt", "fs", "io-util"] }
tracing = { workspace = true }
triomphe = { workspace = true }
weedb = { workspace = true }

# local deps
tycho-block-util = { workspace = true }
tycho-util = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
bytesize = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }

tycho-util = { workspace = true, features = ["test"] }
tycho-storage = { workspace = true, features = ["test"] }

[features]
test = ["dep:tempfile"]

[lints]
workspace = true
