[package]
name = "tycho-storage"
description = "Tycho storage context."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# crates.io deps
anyhow = { workspace = true }
arc-swap = { workspace = true }
bytesize = { workspace = true }
fdlimit = { workspace = true }
libc = { workspace = true }
metrics = { workspace = true }
rand = { workspace = true }
rlimit = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "fs", "io-util"] }
tracing = { workspace = true }
weedb = { workspace = true }

# local deps
tycho-storage-traits = { workspace = true }
tycho-util = { workspace = true, features = ["sysinfo"] }

[dev-dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
bytesize = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }

tycho-util = { workspace = true, features = ["test"] }

[features]
test = []

[lints]
workspace = true
