[package]
name = "tycho-util-proc"
description = "Macros implementations for `tycho-util`."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
# crates.io deps
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["visit", "full"] }
