[package]
name = "tycho-util"
description = "Shared utilities for node components."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# crates.io deps
ahash = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
castaway = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
getip = { workspace = true, optional = true }
humantime = { workspace = true }
libc = { workspace = true, optional = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
rayon-core = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
sysinfo = { workspace = true, optional = true }
thiserror = { workspace = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
tl-proto = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt"] }
tracing = { workspace = true }
tracing-appender = { workspace = true, optional = true }
tracing-stackdriver = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
zstd-safe = { workspace = true, features = ["std", "zstdmt"] }
zstd-sys = { workspace = true }

tycho-util-proc = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json = { workspace = true, features = ["preserve_order"] }

[features]
test = ["dep:tracing-subscriber"]
cli = [
    "dep:getip",
    "dep:libc",
    "dep:tracing-appender",
    "dep:tracing-stackdriver",
    "dep:tracing-subscriber",
    "tokio/signal",
    "metrics-exporter-prometheus",
    "tikv-jemalloc-ctl",
]

[[bench]]
name = "p2"
harness = false
path = "benches/p2.rs"

[lints]
workspace = true

[package.metadata.cargo-shear]
# used inside macros
ignored = ["rayon"]
