[package]
name = "tycho-validator"
version = "0.0.1"
edition = "2021"
description = "A validator node."

[dependencies]
# crates.io deps

# local deps
tycho-core = { path = "../core", version = "=0.0.1" }
tycho-consensus = { path = "../consensus", version = "=0.0.1" }
tycho-storage = { path = "../storage", version = "0.1" }
tycho-util = { path = "../util", version = "=0.0.1" }

[lints]
workspace= true
