[package]
name = "tycho-wu-tuner"
description = "A Work Units tuner component."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# crates.io deps
anyhow = { workspace = true }
tycho-types = { workspace = true, features = ["blake3"] }
futures-util = { workspace = true }
metrics = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }

# local deps
tycho-collator = { workspace = true }
tycho-core = { workspace = true }
tycho-crypto = { workspace = true }
tycho-util = { workspace = true, features = ["cli"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
tycho-collator = { workspace = true, features = ["test"] }
tycho-core = { workspace = true, features = ["test"] }
tycho-util = { workspace = true, features = ["test"] }

[features]
default = []

[lints]
workspace = true
