[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
prost-build = { workspace = true }

tycho-cli-models = { workspace = true }