[package]
name = "tycho-block-util-fuzz"
version = "0.0.1"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tycho-block-util]
path = ".."

[dependencies.tycho-types]
version = "0.3.4"
features = ["tycho"]

[[bin]]
name = "fuzz_ext_msg"
path = "fuzz_targets/fuzz_ext_msg.rs"
test = false
doc = false
bench = false
