[package]
name = "tycho-block-util-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "ext_msg"
path = "fuzz_targets/ext_msg.rs"
test = false
doc = false
bench = false

[dependencies]
libfuzzer-sys = { workspace = true }
tycho-block-util = { path = ".." }
tycho-types = { workspace = true }
